refactor(story-0008-0008): replace string concatenation with .formatted()
Replace string concatenation using + operator with .formatted() across
21 files for error messages, log messages, warning messages, and
formatted output. Preserves concatenation in template content builders,
file path construction, and StringBuilder-based content assembly.

Key changes:
- StackValidator: 6 error messages migrated to .formatted()
- ConfigLoader: 3 exception messages migrated
- Auditor: 4 error/warning messages migrated
- CicdAssembler: 3 error/warning messages migrated
- GithubAgentsAssembler: 2 error messages migrated
- ProgressFormatter: 6 formatted output strings + String.format to .formatted()
- ReadmeTables: 8 table row formatters migrated
- DocsAdrAssembler: 2 template formatters + String.format to .formatted()
- CopyHelpers: 8 error messages migrated
- GoldenFileDiffReporter: 7 diff output formatters migrated
- CLI commands: 12 error/status messages migrated
- Additional files: Consolidator, HooksAssembler, CodexConfigAssembler,
  CodexSkillsAssembler, GithubMcpAssembler, JacksonCheckpointPersistence,
  AtomicOutput, OverwriteDetector

All 2070 tests passing, golden files byte-for-byte identical,
JaCoCo coverage thresholds met.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>